[package]
name    = "dxcan"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "dxcan"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
futures    = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util"] }