[package]
name    = "dxcan"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "dxcan"
path = "src/main.rs"

[[bin]]
name = "dxcan-nmap"
path = "src/bin/dxcan_nmap/main.rs"

[[bin]]
name = "dxcan-rustscan"
path = "src/bin/dxcan_rustscan/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
futures    = "0.3"
tokio      = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "io-util", "process"] }
quick-xml  = { version = "0.40", features = ["serialize"] }
regex        = "1"
dns-lookup   = "2"
libc         = "0.2"
tokio-rustls = "0.26"
webpki-roots = "0.26"